@@ -1072,6 +1072,8 @@ $2',
 'customjsprotected'             => "You do not have permission to edit this JavaScript page because it contains another user's personal settings.",
 'mycustomcssprotected'          => "You do not have permission to edit this CSS page.",
 'mycustomjsprotected'           => "You do not have permission to edit this JavaScript page.",
+'myprivateinfoprotected'        => "You do not have permission to edit your private information.",
+'mypreferencesprotected'        => "You do not have permission to edit your preferences.",
 'ns-specialprotected'           => 'Special pages cannot be edited.',
 'titleprotected'                => 'This title has been protected from creation by [[User:$1|$1]].
 The reason given is "\'\'$2\'\'".',
@@ -2098,6 +2100,9 @@ Your email address is not revealed when other users contact you.',
 'right-editmyuserjs'          => "Edit your own user JavaScript files",
 'right-viewmywatchlist'       => "View your own watchlist",
 'right-editmywatchlist'       => "Edit your own watchlist. Note some actions will still add pages even without this right.",
+'right-viewmyprivateinfo'     => "View your own private data (e.g. email address, real name)",
+'right-editmyprivateinfo'     => "Edit your own private data (e.g. email address, real name)",
+'right-editmyoptions'         => "Edit your own preferences",
 'right-rollback'              => 'Quickly rollback the edits of the last user who edited a particular page',
 'right-markbotedits'          => 'Mark rolled-back edits as bot edits',
 'right-noratelimit'           => 'Not be affected by rate limits',
