@@ -426,6 +426,8 @@ $wgMessageStructure = array(
 		'customjsprotected',
 		'mycustomcssprotected',
 		'mycustomjsprotected',
+		'myprivateinfoprotected',
+		'mypreferencesprotected',
 		'ns-specialprotected',
 		'titleprotected',
 		'filereadonlyerror',
@@ -1225,6 +1227,9 @@ $wgMessageStructure = array(
 		'right-editmyuserjs',
 		'right-viewmywatchlist',
 		'right-editmywatchlist',
+		'right-viewmyprivateinfo',
+		'right-editmyprivateinfo',
+		'right-editmyoptions',
 		'right-rollback',
 		'right-markbotedits',
 		'right-noratelimit',
